feat(lib): define library for design

--- a/apps/master-newsletter/src/pages/index.astro
+++ b/apps/master-newsletter/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import { MasterComponents} from '@nx-project-example/master-components';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<MasterComponents />
 		<svg
 			class="astro-a"
 			width="495"
